@@ -17,43 +17,17 @@ int __mingwthr_remove_key_dtor (DWORD key);
 extern int ___w64_mingwthr_remove_key_dtor (DWORD key);
 extern int ___w64_mingwthr_add_key_dtor (DWORD key, void (*dtor)(void *));
 
-
-#ifndef _WIN64
-#define MINGWM10_DLL "mingwm10.dll"
-typedef int (*fMTRemoveKeyDtor)(DWORD key);
-typedef int (*fMTKeyDtor)(DWORD key, void (*dtor)(void *));
-extern fMTRemoveKeyDtor __mingw_gMTRemoveKeyDtor;
-extern fMTKeyDtor __mingw_gMTKeyDtor;
-extern int __mingw_usemthread_dll;
-#endif
-
 int
 __mingwthr_remove_key_dtor (DWORD key)
 {
-#ifndef _WIN64
-  if (!__mingw_usemthread_dll)
-#endif
-     return ___w64_mingwthr_remove_key_dtor (key);
-#ifndef _WIN64
-  if (__mingw_gMTRemoveKeyDtor)
-    return (*__mingw_gMTRemoveKeyDtor) (key);
-  return 0;
-#endif
+   return ___w64_mingwthr_remove_key_dtor (key);
 }
 
 int
 __mingwthr_key_dtor (DWORD key, void (*dtor)(void *))
 {
   if (dtor)
-    {
-#ifndef _WIN64
-      if (!__mingw_usemthread_dll)
-#endif
-        return ___w64_mingwthr_add_key_dtor (key, dtor);
-#ifndef _WIN64
-      if (__mingw_gMTKeyDtor)
-	return (*__mingw_gMTKeyDtor) (key, dtor);
-#endif
-    }
+    return ___w64_mingwthr_add_key_dtor (key, dtor);
+
   return 0;
 }
